--- a/Giraffe.html
+++ b/Giraffe.html
@@ -4,6 +4,6 @@
     <title>Giraffe</title>
 </head>
     <body>
-        <h1>Hallo ich bin die Giraffe Emilia.</h1>
+        <h1>Hallo ich bin ia.</h1>
     </body>
 </html>
